# ModelDriftRx

./: .env.example  .gitignore  MAKEFILE_USAGE.txt  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
api/: main.py  schemas.py  state.py
api/routers/: drift.py  health.py  history.py  predict.py
dashboard/: app.py  data.py
dashboard/components/: charts.py  gauges.py
dashboard/pages/: champion_challenger.py  drift_timeline.py  health.py  incidents.py
src/: contracts.py  detector.py  diagnoser.py  healer.py  protocols.py  reporter.py
src/utils/: config.py
tests/: conftest.py  mocks.py
tests/e2e/: test_api.py
tests/unit/: test_contracts.py  test_detector.py  test_diagnoser.py  test_healer.py  test_reporter.py
