# ============================================================================
# Model Drift Watch
# ============================================================================

[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.build_meta"

# ============================================================================
# Project Metadata
# ============================================================================

[project]
name = "autopilot-ml"
version = "0.1.0"
description = "Self-healing ML model monitoring platform — detects drift, diagnoses root causes, auto-retrains, and generates incident reports."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "NestaLacroix" },
]
keywords = [
    "machine-learning",
    "mlops",
    "drift-detection",
    "pytorch",
    "model-monitoring",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]

# ============================================================================
# Dependencies
# ============================================================================

dependencies = [
    # ---- Core ML ----
    "torch>=2.2",
    "numpy>=1.26",
    "scipy>=1.12",
    "scikit-learn>=1.4",
    "pandas>=2.2",

    # ---- Explainability ----
    "shap>=0.45",

    # ---- Experiment Tracking ----
    "mlflow>=2.10",

    # ---- API ----
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",

    # ---- Dashboard ----
    "streamlit>=1.31",
    "plotly>=5.18",

    # ---- Reporting ----
    "jinja2>=3.1",
    "matplotlib>=3.8",

    # ---- Config / Utils ----
    "python-dotenv>=1.0",
]

[project.optional-dependencies]

# Everything needed for local development
dev = [
    # ---- Testing ----
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",                  # FastAPI TestClient

    # ---- Linting / Formatting ----
    "ruff>=0.3",
    "mypy>=1.8",

    # ---- Pre-commit ----
    "pre-commit>=3.6",
]

# For generating PDF incident reports (optional, heavy dependency)
reports = [
    "weasyprint>=61.0",
]

[project.urls]
Homepage = "https://github.com/NestaLacroix/ModelDriftWatch.git"

# ============================================================================
# Package Discovery
# ============================================================================

[tool.setuptools.packages.find]
include = ["src*", "api*", "dashboard*"]

# ============================================================================
# Ruff — Linting + Formatting (replaces flake8, isort, black)
# ============================================================================

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "api", "dashboard", "tests"]

[tool.ruff.lint]
select = [
    "E",        # pycodestyle errors
    "W",        # pycodestyle warnings
    "F",        # pyflakes
    "I",        # isort (import sorting)
    "N",        # pep8-naming
    "UP",       # pyupgrade (modern Python syntax)
    "B",        # flake8-bugbear (common gotchas)
    "SIM",      # flake8-simplify
    "RUF",      # ruff-specific rules
]
ignore = [
    "E501",     # line too long — formatter handles this
    "B008",     # do not perform function call in argument defaults (needed for FastAPI Depends())
]

[tool.ruff.lint.isort]
known-first-party = ["src", "api", "dashboard"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ============================================================================
# Pytest
# ============================================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]                  # so imports like `from src.contracts import ...` work
addopts = [
    "-ra",                          # show summary of all non-passing tests
    "-q",                           # quiet output
    "--strict-markers",             # fail on unknown markers
    "--tb=short",                   # shorter tracebacks
]
markers = [
    "slow: marks tests that take a while (e.g. SHAP, retraining)",
    "integration: marks integration tests",
    "e2e: marks end-to-end tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

# ============================================================================
# MyPy — Static Type Checking
# ============================================================================

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true        # enforce type hints everywhere
ignore_missing_imports = true       # torch, shap, etc. don't always have stubs
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false       # tests don't need full type annotations

# ============================================================================
# Coverage
# ============================================================================

[tool.coverage.run]
source = ["src", "api"]
omit = [
    "tests/*",
    "simulation/*",
    "example_model/*",
    "dashboard/*",                  # Streamlit is hard to unit test
]

[tool.coverage.report]
show_missing = true
fail_under = 70                     # start at 70%, raise as project matures
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "pass",
    "\\.\\.\\.",                     # Protocol method stubs
]